<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Battelle - Time And Motion Study</string>
    <string name="Task1">Task 1:</string>
	<string name="Task2">Task 2:</string>
	<string name="Task3">Task 3:</string>
	<string name="Task4">Task 4:</string>
	<string name="Task5">Task 5:</string>
	<string name="Task6">Task 6:</string>
	<string name="Task7">Task 7:</string>
	<string name="Task8">Task 8:</string>
	<string name="Task9">Task 9:</string>
	<string name="Task10">Task 10:</string>
	<string name="TestName">Test Name:</string>
	<string name="btnAddTest">Add Test</string>
	<string name="btnDeleteTest">Delete Test</string>
	<string name="btnStartStop">Start</string>
	<string name="btnReset">Reset</string>
	<string name="VoiceRecordInst">Use the back button after recording your note</string>
	<string name="btnSaveConfig">Save</string>
	<string name="btnCancelConfig">Cancel</string>
	<string-array name="planets_array">
		<item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
	</string-array>
	<string name="spTests">Tests</string>
</resources>
