<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="match_parent">
<TableRow>
    <ListView android:id="@+id/lstTests" 
    	android:layout_height="fill_parent" 
    	android:layout_width="fill_parent"></ListView>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView1" 
    	android:text="@string/TestName"></TextView>
    <EditText android:id="@+id/editTestName"
    	android:layout_height="wrap_content" 
    	android:layout_weight="3"></EditText>
    <Button android:id="@+id/btnAddTest"
    	android:layout_height="wrap_content" 
    	android:layout_weight="1"
    	android:text="@string/btnAddTest"></Button>
    <Button android:id="@+id/btnDeleteTest"
    	android:layout_height="wrap_content" 
    	android:layout_weight="1"
    	android:text="@string/btnDeleteTest"></Button>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView1" 
    	android:text="@string/Task1"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText1"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>    	
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1"  
    	android:id="@+id/textView2" 
    	android:text="@string/Task2"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText2"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView3" 
    	android:text="@string/Task3"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText3"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView4" 
    	android:text="@string/Task4"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText4"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView5" 
    	android:text="@string/Task5"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText5"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView6" 
    	android:text="@string/Task6"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText6"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView7" 
    	android:text="@string/Task7"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText7"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1"  
    	android:id="@+id/textView8" 
    	android:text="@string/Task8"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText8"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView9" 
    	android:text="@string/Task9"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText9"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
<TableRow>
    <TextView 
    	android:textAppearance="?android:attr/textAppearanceMedium" 
    	android:layout_height="wrap_content" 
    	android:layout_weight="1" 
    	android:id="@+id/textView10" 
    	android:text="@string/Task10"
    	android:gravity="center_horizontal"></TextView>
    <EditText android:id="@+id/editText10"
    	android:layout_height="wrap_content" 
    	android:layout_weight="6"></EditText>
</TableRow>
</TableLayout>
